# uav-vlm-exploration

./: .gitignore  README.md
cloud_merge/: CMakeLists.txt
cloud_merge/launch/: fusion.launch.py
cloud_merge/src/: stereo_camera_info_publisher.cpp
notebooks/: bag_analysis.py
uav_bringup/launch/: full_stack.launch.py
uav_control/launch/: control.launch.py
uav_control/src/: setpoint_publisher_node.cpp
uav_exploration/src/: exploration_metrics.py  spf_node.py  spf_vlm_node.py  vlm_control_node.py  vlm_frontier_selector.py  vlm_interactive_node.py  vlm_unified_node.py  vlm_vision_node.py
uav_global_planner/: package.xml  setup.cfg  setup.py
uav_global_planner/launch/: spf_orchestrator.launch.py
uav_global_planner/uav_global_planner/: spf_orchestrator.py
uav_local_planner/: CHANGES.md
uav_local_planner/config/: mp_params.yaml
uav_local_planner/include/uav_local_planner/: motion_primitives.hpp
uav_local_planner/launch/: local_planner.launch.py
uav_local_planner/scripts/: send_and_record.py
uav_local_planner/src/: motion_primitives.cpp  mp_node.cpp  waypoint_manager_node.cpp
uav_planner_interface/launch/: planner.launch.py
uav_planner_interface/src/: planner_server_node.cpp
uav_vlm/: package.xml  setup.cfg  setup.py
uav_vlm/config/: vlm.yaml
uav_vlm/launch/: vlm.launch.py
uav_vlm/uav_vlm/: user_instruction_node.py  vlm_spatial_grounding.py
