<?xml version="1.0"?>
<package format="3">
  <name>uav_global_planner</name>
  <version>0.1.0</version>
  <description>SPF Orchestrator — global planner for VLM navigation</description>
  <maintainer email="e1547056@u.nus.edu">Ahmed</maintainer>
  <license>Apache-2.0</license>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>uav_planner_interface</depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <export><build_type>ament_python</build_type></export>
</package>